fix(array-editor) wrong margin

--- a/src/app/test-generator/array-editor/array-editor.component.scss
+++ b/src/app/test-generator/array-editor/array-editor.component.scss
@@ -4,7 +4,6 @@
 }
 .wrapper-array{
   overflow: hidden;
-  margin-bottom: 16px;
   margin-left: 19px;
   padding-left: 16px;
   border-left: 1px solid rgba($color: #000000, $alpha: .12);
